@@ -1,9 +1,10 @@
 highway (0.12.0-1) UNRELEASED; urgency=medium
 
-  * Add Shift*8, Compress16, Gather, StoreInterleaved3/4, inlined math
+  * Add Shift*8, Compress16, emulated Scatter/Gather, StoreInterleaved3/4
   * Remove deprecated HWY_*_LANES, deprecate HWY_GATHER_LANES
+  * Proper IEEE rounding, reduce libstdc++ usage, inlined math
 
- -- Jan Wassenberg <janwas@google.com>  Mon, 29 Mar 2021 12:00:00 +0200
+ -- Jan Wassenberg <janwas@google.com>  Thu, 15 Apr 2021 20:00:00 +0200
 
 highway (0.11.1-1) UNRELEASED; urgency=medium
 
